--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="PowerDo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -16,22 +15,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".EditActivity"></activity>
 
-        <!-- add the following metadata for version and database name -->
-        <meta-data
-            android:name="AA_DB_NAME"
-            android:value="RestClient.db" />
-        <meta-data
-            android:name="AA_DB_VERSION"
-            android:value="1" />
-
-
-
-        <activity android:name=".EditItemActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
